expanded width of .monologue-controls from 535px to 580px to prevent expand/collapse icon from wrapping to 2nd line when displayed with longest play title (Twelfth Night, Or What You Will

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -471,7 +471,7 @@ th.th-pad-right {
     display: inline-block;
     line-height: 200%;
     padding: 2px;
-    width: 535px;
+    width: 580px;
     color: gray;
 }
 
